Fixed jumping thumbnails in the carousel

--- a/web/less/frontend/modules/collection.less
+++ b/web/less/frontend/modules/collection.less
@@ -57,6 +57,7 @@
     }
   }
   .thumbnail {
+	  margin-right: 5px;
     padding: 0;
     border: none;
     .square(69px);
